# ptouch-print

./: .gitignore  AppearanceMetrics.h  CMakeLists.txt  GNUmakefile  PtouchUtilityInfo.plist  README  README.md  compile.sh  ptouch-print.1  ptouch-utility.1
include/: ptouch-render.h  ptouch.h
po/: de.po  en.po  ptouch.pot
src/: libptouch.c  ptouch-print.c  ptouch-render-gnustep.m  ptouch-render.c  ptouch-utility.c  render_test.c  render_test.m  status-monitor.c
src-gui/: PtouchGUI.m  PtouchUtility.m
udev/: 20-usb-ptouch-devd.conf  20-usb-ptouch-permissions.rules
